<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/grapeBack"
          android:layout_width="match_parent"
          android:layout_height="125dp"
          android:layout_weight="160"
          android:scaleType="fitEnd"
          app:srcCompat="@drawable/grape" />

      <Button
          android:id="@+id/buttonBack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          android:layout_marginStart="32dp"
          android:layout_marginBottom="50dp"
          android:background="@color/white"
          android:backgroundTint="@color/white"
          android:fontFamily="@font/montserrat_regular"
          android:gravity="center"
          android:text="@string/back"
          android:textColor="#AB47BC"
          android:textSize="16sp"
          app:strokeColor="@color/magenta"
          app:strokeWidth="4dp" />

      <TextView
          android:id="@+id/settingsText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="32dp"
          android:layout_marginRight="32dp"
          android:text="@string/settings"
          android:textSize="30sp"
          android:textColor="@color/black"
          android:gravity="left"
          android:fontFamily="@font/montserrat_bold"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/changePassText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="32dp"
          android:layout_marginRight="32dp"
          android:text="@string/change_pass"
          android:textSize="18sp"
          android:textColor="@color/black"
          android:gravity="left"
          android:fontFamily="@font/montserrat_regular"
          android:textStyle="normal" />

      <EditText
          android:id="@+id/oldPass"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="32dp"
          android:drawableStart="@drawable/lock"
          android:drawableEnd="@drawable/eye"
          android:drawablePadding="16dp"
          android:ems="20"
          android:hint="@string/enter_old_pass"
          android:inputType="textPassword"
          android:textColorHint="@color/dark_grey"
          android:fontFamily="@font/montserrat_regular"
          tools:visibility="visible" />

      <EditText
          android:id="@+id/newPass"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="32dp"
          android:drawableStart="@drawable/lock"
          android:drawableEnd="@drawable/eye"
          android:drawablePadding="16dp"
          android:ems="20"
          android:hint="@string/enter_new_pass"
          android:inputType="textPassword"
          android:textColorHint="@color/dark_grey"
          android:fontFamily="@font/montserrat_regular"
          tools:visibility="visible" />

      <EditText
          android:id="@+id/confPass"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="32dp"
          android:drawableStart="@drawable/lock"
          android:drawableEnd="@drawable/eye"
          android:drawablePadding="16dp"
          android:ems="20"
          android:hint="@string/conf_pass"
          android:inputType="textPassword"
          android:textColorHint="@color/dark_grey"
          android:fontFamily="@font/montserrat_regular"
          tools:visibility="visible" />

      <Button
          android:id="@+id/buttonLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:layout_marginTop="30dp"
          android:layout_marginRight="32dp"
          android:background="@color/white"
          android:backgroundTint="@color/white"
          android:fontFamily="@font/montserrat_medium"
          android:gravity="center"
          android:text="@string/install"
          android:textColor="@color/magenta"
          android:textSize="20sp"
          app:strokeColor="@color/magenta"
          app:strokeWidth="4dp" />

      <ImageView
          android:id="@+id/sunBack"
          android:layout_width="match_parent"
          android:layout_height="182dp"
          android:layout_weight="160"
          android:scaleType="fitStart"
          app:srcCompat="@drawable/sun" />

    </LinearLayout>
  </ScrollView>

  </LinearLayout>