<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/orangeBack"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="end"
                android:scaleType="fitEnd"
                android:visibility="visible"
                app:srcCompat="@drawable/orange" />

            <Button
                android:id="@+id/buttonReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="50dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/reg"
                android:textColor="#AB47BC"
                android:textSize="16sp"
                app:strokeColor="@color/magenta"
                app:strokeWidth="4dp" />

            <TextView
                android:id="@+id/authText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/auth"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginRight="32dp"
                android:drawableStart="@drawable/envelope"
                android:drawablePadding="16dp"
                android:ems="20"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/montserrat_regular"
                android:textColorHint="@color/dark_grey" />

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="32dp"
                android:drawableStart="@drawable/lock"
                android:drawableEnd="@drawable/eye"
                android:drawablePadding="16dp"
                android:ems="20"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColorHint="@color/dark_grey"
                android:fontFamily="@font/montserrat_regular"
                tools:visibility="visible" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/join"
                android:textColor="@color/magenta"
                android:textSize="24sp"
                app:strokeColor="@color/magenta"
                app:strokeWidth="4dp" />

            <ImageView
                android:id="@+id/pinkBack"
                android:layout_width="300sp"
                android:layout_height="182dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pink" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>