<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#AB47BC"
                android:textSize="16sp"
                app:strokeColor="@color/magenta"
                app:strokeWidth="4dp" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="#AB47BC"
                android:textSize="16sp"
                app:strokeColor="@color/magenta"
                app:strokeWidth="4dp" />

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_gravity="end"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/picture" />

            <Button
                android:id="@+id/buttonLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/load"
                android:textColor="@color/magenta"
                android:textSize="16sp"
                app:strokeColor="@color/magenta"
                app:strokeWidth="4dp" />

            <Button
                android:id="@+id/buttonResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10sp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/recognize"
                android:textColor="@color/magenta"
                android:textSize="16sp"
                app:strokeColor="@color/magenta"
                app:strokeWidth="4dp" />
            <EditText
                android:id="@+id/textResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:hint="@string/result"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

            <ImageButton
                android:id="@+id/copyButton"
                android:background="#55FFFFFF"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="20sp"
                android:src="@drawable/copy"

                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>